adding http requests

--- a/src/app/component/banner/banner.component.html
+++ b/src/app/component/banner/banner.component.html
@@ -1,4 +1,4 @@
-<div class="hero">
+<div class="hero" [ngClass]="mode == 'mobile' ? 'mobile' : 'desktop'">
     <div class="hero-body">
         <h3>Bazaar</h3>
         <p>Description</p>
