--- a/src/app/component/banner/banner.component.scss
+++ b/src/app/component/banner/banner.component.scss
@@ -1,10 +1,16 @@
 .hero {
     width: 100%;
-    height: 700px;
+    //height: 700px;
     background-image: linear-gradient(rgba(0,0,0,.53),rgba(0,0,0,.5)),url(https://images.unsplash.com/photo-1548148870-adbf75452257?auto=format&fit=crop&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&q=80&w=1050);
     overflow: hidden;
     background-repeat: no-repeat;
     background-size: cover;
+}
+.mobile{
+    height: 250px;
+}
+.desktop{
+    height: 700px;
 }
 div{
     justify-content: center;
