--- a/src/app/component/cards/cards.component.html
+++ b/src/app/component/cards/cards.component.html
@@ -1,1 +1,19 @@
-<p>cards works!</p>
+<mat-card 
+[ngClass]="mode === 'mobile'? 'mobile' : 'desktop'">
+    <mat-card-header>
+      <div mat-card-avatar class="example-header-image"></div>
+      <mat-card-title>{{name}}</mat-card-title>
+      <mat-card-subtitle>{{category}}</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image [src]="productImage" [alt]="name">
+    <mat-card-content>
+      <p>
+        {{description}}
+      </p>
+    </mat-card-content>
+    <mat-card-actions>
+      <mat-icon aria-hidden="false" aria-label="add_shopping">add_shopping_cart</mat-icon>&nbsp;
+      <mat-icon aria-hidden="false" aria-label="favourite">favorite_border</mat-icon>
+    </mat-card-actions>
+  </mat-card>
+  
