added a spinner and displaying products on home page

--- a/src/app/component/cards/cards.component.html
+++ b/src/app/component/cards/cards.component.html
@@ -1,19 +1,16 @@
-<mat-card 
-[ngClass]="mode === 'mobile'? 'mobile' : 'desktop'">
-    <mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>{{name}}</mat-card-title>
-      <mat-card-subtitle>{{category}}</mat-card-subtitle>
-    </mat-card-header>
-    <img mat-card-image [src]="productImage" [alt]="name">
-    <mat-card-content>
-      <p>
-        {{description}}
-      </p>
-    </mat-card-content>
-    <mat-card-actions>
-      <mat-icon aria-hidden="false" aria-label="add_shopping">add_shopping_cart</mat-icon>&nbsp;
-      <mat-icon aria-hidden="false" aria-label="favourite">favorite_border</mat-icon>
-    </mat-card-actions>
-  </mat-card>
-  
+<ng-container *ngIf="products ; else elseBlock">
+  <span></span>
+<span *ngFor="let product of products">
+  <mat-card 
+  [ngClass]="mode === 'mobile'? 'mobile' : 'desktop'">
+      <img mat-card-image [src]="product.product_image" [alt]="product.product_name">
+      <mat-card-content>
+        <mat-card-title class="text-wrap">{{product.product_name}}</mat-card-title>
+        <mat-card-subtitle>{{product.price}}</mat-card-subtitle>
+      </mat-card-content>
+    </mat-card>    
+</span>
+</ng-container>
+<ng-template #elseBlock>
+<app-spinner></app-spinner>
+</ng-template>
