--- a/src/app/pages/home/home-mobile/home-mobile.component.html
+++ b/src/app/pages/home/home-mobile/home-mobile.component.html
@@ -1,4 +1,2 @@
 <app-banner mode="mobile"></app-banner>
-<span *ngFor="let item of appStateService.products">
-    <app-cards [name]="''" [price]=32 [category]="''" [categoryImage]="''" [productImage]="''" [description]="''" mode="mobile"></app-cards>
-</span>
+<app-cards mode="mobile" class="mt-5"></app-cards>
