--- a/src/app/component/cards/cards.component.scss
+++ b/src/app/component/cards/cards.component.scss
@@ -1,5 +1,14 @@
 .mobile{
-    width: 150px;
+  width: calc(50vw - 10px);
+    margin: 5px;
+}
+.mobile mat-card-title{
+  font-size: 15px;
+}
+.mobile mat-card{
+  padding: 0px 5px;
+  overflow-x:hidden;
+  margin-right:5px;
 }
 .desktop{
     width: 400px;
