--- a/src/app/modules/user/register/register.component.html
+++ b/src/app/modules/user/register/register.component.html
@@ -105,5 +105,6 @@
       <mat-card-actions>
         <button mat-raised-button [disabled]="!!!this.signUpForm.valid">Sign In</button>
       </mat-card-actions>
+      <p mat-raised-button class="pt-2" [routerLink]="['/user/login']">Already have an account ?</p>
     </mat-card>
     </form>
