--- a/src/app/modules/product-detail/product-mobile/product-mobile.component.html
+++ b/src/app/modules/product-detail/product-mobile/product-mobile.component.html
@@ -32,7 +32,7 @@
             &nbsp;
             <mat-icon (click)="updateQuantity('inc')">add_circle_outline</mat-icon>
         </span>    
-        <mat-icon>add_shopping_cart</mat-icon>
+        <mat-icon (click)="addToCart()">add_shopping_cart</mat-icon>
     </mat-toolbar>
     <mat-toolbar *ngIf="!(product.quantity > 0)" color="accent"><span class="out-of-stock"><mat-icon>remove_shopping_cart</mat-icon>&nbsp;<p>Out of stock</p></span></mat-toolbar>
 </div>
