--- a/src/app/modules/user/login/login.component.html
+++ b/src/app/modules/user/login/login.component.html
@@ -41,9 +41,8 @@
     <span>Password should be 8 characters long</span>
   </mat-hint>
   <mat-card-actions>
-    <button mat-raised-button class="mb-2" [disabled]="!!!this.signInForm.valid">Sign In</button>
-    <mat-divider></mat-divider>
-    <p mat-raised-button class="mt-2" [routerLink]="['/user/register']">New Account</p>
+    <button mat-raised-button [disabled]="!!!this.signInForm.valid">Sign In</button>
   </mat-card-actions>
+    <p mat-raised-button class="pt-2" [routerLink]="['/user/register']">New Account</p>
 </mat-card>
 </form>
