--- a/src/app/modules/cart/view-cart/view-cart.component.scss
+++ b/src/app/modules/cart/view-cart/view-cart.component.scss
@@ -5,13 +5,15 @@
 
 .view-cart-mobile__title-container{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 }
 
-.view-cart-mobile__title-container__text,.view-cart-mobile__title-container__badge{
+.view-cart-mobile__title-container__text{
     font-size: 25px;
     color: #0a58ca;
+    text-align: center;
+    margin-bottom: 30px;
 }
 
 .view-cart-mobile__cart-items-empty{
@@ -35,4 +37,13 @@
 mat-list-item {
     display: flex;
     justify-content: space-between;
+}
+
+.mat-list{
+    margin: 0px;
+    padding: 0px;
+}
+
+.view-cart-mobile__cart-items-fill__price,.view-cart-mobile__cart-items-fill__actions{
+    text-align: end;
 }
