--- a/src/app/modules/cart/confirm-modal/confirm-modal.component.html
+++ b/src/app/modules/cart/confirm-modal/confirm-modal.component.html
@@ -5,15 +5,15 @@
     >
     <mat-card-subtitle>{{ data.productName }}</mat-card-subtitle>
   </mat-card-header>
-  <img mat-card-image [src]="data.productImage" [alt]="data.productName">
+  <img mat-card-image [src]="data.productImage" [alt]="data.productName" />
   <mat-card-content>
-      <div class="confirm-modal__price-and-quantity">
-      <span>Price : {{data.price}}</span>
-      <span>Quantity : {{data.quantity}}</span>
+    <div class="confirm-modal__price-and-quantity">
+      <span>Price : {{ data.price }}</span>
+      <span>Quantity : {{ data.quantity }}</span>
     </div>
-  <mat-card-actions align="end">
-    <button mat-button [mat-dialog-close]="true">confirm</button>
-    <button mat-button (click)="onConfirm()">cancel</button>
-  </mat-card-actions>
-</mat-card-content>
+    <mat-card-actions align="end">
+      <button mat-button [mat-dialog-close]="true">confirm</button>
+      <button mat-button (click)="onConfirm()">cancel</button>
+    </mat-card-actions>
+  </mat-card-content>
 </mat-card>
