--- a/src/app/modules/cart/view-cart/view-cart.component.scss
+++ b/src/app/modules/cart/view-cart/view-cart.component.scss
@@ -1,49 +1,50 @@
-.view-cart-mobile{
-    overflow-x: hidden;
-    padding: 30px 15px;
+.view-cart-mobile {
+  overflow-x: hidden;
+  padding: 30px 15px 0px 15px;
 }
 
-.view-cart-mobile__title-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.view-cart-mobile__title-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.view-cart-mobile__title-container__text{
-    font-size: 25px;
-    color: #0a58ca;
-    text-align: center;
-    margin-bottom: 30px;
+.view-cart-mobile__title-container__text {
+  font-size: 25px;
+  color: #0a58ca;
+  text-align: center;
+  margin-bottom: 30px;
 }
 
-.view-cart-mobile__cart-items-empty{
-    height: auto;
-    width: 100%;
-    overflow: hidden;
+.view-cart-mobile__cart-items-empty {
+  height: auto;
+  width: 100%;
+  overflow: hidden;
 }
 
-.view-cart-mobile__cart-items-empty__img{
-    object-fit: fill;
-    width: 100%;
-    height: 50vh;
+.view-cart-mobile__cart-items-empty__img {
+  object-fit: fill;
+  width: 100%;
+  height: 50vh;
 }
 
-.view-cart-mobile__cart-items-empty__link{
-    font-size: 18px;
-    text-align: center;
-    color: #0a58ca;
+.view-cart-mobile__cart-items-empty__link {
+  font-size: 18px;
+  text-align: center;
+  color: #0a58ca;
 }
 
 mat-list-item {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
-.mat-list{
-    margin: 0px;
-    padding: 0px;
+.mat-list {
+  margin: 0px;
+  padding: 0px;
 }
 
-.view-cart-mobile__cart-items-fill__price,.view-cart-mobile__cart-items-fill__actions{
-    text-align: end;
+.view-cart-mobile__cart-items-fill__price,
+.view-cart-mobile__cart-items-fill__actions {
+  text-align: end;
 }
