--- a/src/app/modules/cart/billing-address/billing-address.component.scss
+++ b/src/app/modules/cart/billing-address/billing-address.component.scss
@@ -1,5 +1,5 @@
-.billing-address{
-    padding: 30px 15px 0px 15px;
+.billing-address {
+  padding: 30px 15px 0px 15px;
 }
 .billing-address__title {
   font-size: 25px;
@@ -7,6 +7,12 @@
   text-align: center;
   margin-bottom: 30px;
 }
-.billing_address__form-field{
-    width: 100%;
+.billing_address__form-field {
+  width: 100%;
+}
+.billing-address__submit-container {
+  text-align: end;
+}
+.billing_address__form-error {
+  color: tomato;
 }
