set up cart and checkout page

--- a/src/app/modules/cart/billing-address/billing-address.component.html
+++ b/src/app/modules/cart/billing-address/billing-address.component.html
@@ -135,6 +135,7 @@
         <button
           class="billing_address__form-submit"
           mat-raised-button
+          color="primary"
           (click)="onSubmit()"
         >
           Save
