--- a/src/app/modules/cart/view-cart/view-cart.component.html
+++ b/src/app/modules/cart/view-cart/view-cart.component.html
@@ -1,3 +1,4 @@
+<ng-container>
 <div *ngIf="!isMobile; else mobileTemplate"></div>
 
 <ng-template #mobileTemplate>
@@ -91,6 +92,8 @@
     <mat-checkbox class="example-margin" color="primary"
       >Save this information for next time</mat-checkbox
     >
+    <button mat-raised-button color='primary' class='view-cart-mobile__payment-btn' (click)="onPayment()">Payment</button>
   </section>
   <mat-divider></mat-divider>
 </ng-template>
+
