--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-main-nav>
-    <router-outlet (activate)="onActivate($event)"></router-outlet>
+  <mat-progress-bar color="accent" mode="indeterminate" *ngIf="this.appStateService.isLoading$ | async"></mat-progress-bar>
+  <router-outlet (activate)="onActivate($event)"></router-outlet>
 </app-main-nav>
