debug checkout and added logo for payment gateway

--- a/src/app/modules/cart/billing-address/billing-address.component.html
+++ b/src/app/modules/cart/billing-address/billing-address.component.html
@@ -144,6 +144,7 @@
           class="billing_address__form-submit"
           mat-raised-button
           color="primary"
+          [disabled]="!this.billingAddressForm.valid"
           (click)="onSubmit()"
         >
           Save
