--- a/src/app/modules/home/home-mobile/home-mobile.component.html
+++ b/src/app/modules/home/home-mobile/home-mobile.component.html
@@ -1,2 +1,13 @@
 <app-banner mode="mobile"></app-banner>
-<app-cards mode="mobile" class="mt-5"></app-cards>
+<div class="row mt-3">
+    <h3>
+        Our Products
+    </h3>
+</div>
+<app-cards mode="mobile"></app-cards>
+
+<mat-card class="whats-new">
+<img src="https://images.unsplash.com/photo-1501870190084-cdf29f15ef87?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" 
+alt="whats-new">
+<h3 class="link-to-shop">Explore</h3>
+</mat-card>
