--- a/src/app/modules/home/home-mobile/home-mobile.component.scss
+++ b/src/app/modules/home/home-mobile/home-mobile.component.scss
@@ -8,3 +8,23 @@ app-cards{
   display:flex;
   overflow-x: scroll;
 }
+h3{
+  text-align: center;
+  font-size: 1.5rem;
+}
+img{
+    height: auto;
+    object-fit: fill;
+    overflow: hidden;
+    width: 100%;
+    border-radius: 4px;
+}
+.link-to-shop{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color:white;
+  text-align: center;
+  font-size: 1.5rem;
+}
