--- a/src/app/modules/home/home-mobile/home-mobile.component.html
+++ b/src/app/modules/home/home-mobile/home-mobile.component.html
@@ -9,5 +9,11 @@
 <mat-card class="whats-new">
 <img src="https://images.unsplash.com/photo-1501870190084-cdf29f15ef87?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" 
 alt="whats-new">
-<h3 class="link-to-shop">Explore</h3>
+<h3 class="link-to-shop">Explore more</h3>
 </mat-card>
+<div class="row mt-3">
+    <h3>
+        Our Categories
+    </h3>
+</div>
+<app-categories [categories]="categories"></app-categories>
