styling home page

--- a/src/app/modules/home/home-mobile/home-mobile.component.html
+++ b/src/app/modules/home/home-mobile/home-mobile.component.html
@@ -1,7 +1,7 @@
 <app-banner mode="mobile"></app-banner>
 <div class="row mt-3">
     <h3>
-        Our Products
+        Trending
     </h3>
 </div>
 <app-cards mode="mobile"></app-cards>
@@ -16,4 +16,10 @@ alt="whats-new">
         Our Categories
     </h3>
 </div>
-<app-categories [categories]="categories"></app-categories>
+<app-categories mode="mobile"></app-categories>
+<div class="row mt-3">
+    <h3>
+        Our Products
+    </h3>
+</div>
+<app-cards mode="mobile"></app-cards>
