--- a/src/app/shared/cards/cards.component.scss
+++ b/src/app/shared/cards/cards.component.scss
@@ -8,11 +8,14 @@
 .mobile mat-card {
   padding: 0px 5px;
   overflow-x: hidden;
-  margin-right: 5px;
+  margin-left: 5px;
 }
 .desktop {
   width: 400px;
 }
 app-spinner{
   width: 100%;
+}
+span:nth-child(1){
+  margin-left: 5px;
 }
