building shop page

--- a/src/app/modules/home/home-mobile/home-mobile.component.html
+++ b/src/app/modules/home/home-mobile/home-mobile.component.html
@@ -23,3 +23,8 @@ alt="whats-new">
     </h3>
 </div>
 <app-cards mode="mobile"></app-cards>
+<mat-toolbar color="primary" class="footer">
+    <span (click)="openBottomSheet()">Terms and conditions</span>
+    <span class="example-spacer"></span>
+    <span>No rights reserved</span>
+  </mat-toolbar>
