--- a/src/app/modules/home/home-mobile/home-mobile.component.scss
+++ b/src/app/modules/home/home-mobile/home-mobile.component.scss
@@ -38,3 +38,8 @@ app-categories{
   overflow-x: scroll;
   scrollbar-color: #c7c7c7 transparent;
 }
+.footer{
+  display:flex;
+  justify-content: space-between;
+  font-size: 15px;
+}
