--- a/src/app/modules/shop/trending/trending.component.scss
+++ b/src/app/modules/shop/trending/trending.component.scss
@@ -8,7 +8,7 @@
   .mobile mat-card {
     padding: 0px 5px;
     overflow-x: hidden;
-    margin-right: 5px;
+    margin-left: 5px;
   }
   .desktop {
     width: 400px;
