--- a/src/app/modules/home/home-mobile/home-mobile.component.html
+++ b/src/app/modules/home/home-mobile/home-mobile.component.html
@@ -6,7 +6,7 @@
 </div>
 <app-cards mode="mobile"></app-cards>
 
-<mat-card class="whats-new">
+<mat-card routerLink="/shop/all" class="whats-new">
 <img src="https://images.unsplash.com/photo-1501870190084-cdf29f15ef87?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" 
 alt="whats-new">
 <h3 class="link-to-shop">Explore more</h3>
