--- a/src/app/modules/shop/cards/cards.component.html
+++ b/src/app/modules/shop/cards/cards.component.html
@@ -11,7 +11,7 @@
         />
         <mat-card-content>
           <mat-card-title class="text-wrap">{{
-            product.product_name.length > 15 ? product.product_name.slice(0,15) + "..." : product.product_name
+            product.product_name | ellipsis
           }}</mat-card-title>
           <mat-card-subtitle>{{ product.price }}</mat-card-subtitle>
         </mat-card-content>
