--- a/src/app/modules/shop/shop-all/shop-all.component.html
+++ b/src/app/modules/shop/shop-all/shop-all.component.html
@@ -1,1 +1,12 @@
-<app-trending></app-trending>
+<div class="row mt-3">
+    <h3>
+        Trending
+    </h3>
+</div>
+<app-cards mode='mobile' filter='trending'></app-cards>
+<div class="row mt-3">
+    <h3>
+        Categories
+    </h3>
+</div>
+<app-cards mode='mobile' filter='trending'></app-cards>
