--- a/src/app/modules/shop/shop-all/shop-all.component.html
+++ b/src/app/modules/shop/shop-all/shop-all.component.html
@@ -3,10 +3,16 @@
         Trending
     </h3>
 </div>
-<app-cards mode='mobile' filter='trending'></app-cards>
+<app-cards class="products-slider" mode='mobile' filter='trending'></app-cards>
 <div class="row mt-3">
     <h3>
         Categories
     </h3>
 </div>
-<app-cards mode='mobile' filter='trending'></app-cards>
+<app-cards  class="products-slider" mode='mobile' filter='trending'></app-cards>
+<div class="row mt-3">
+    <h3 class="mb-0">
+        Explore more
+    </h3>
+</div>
+<app-infinite-products></app-infinite-products>
