--- a/src/app/modules/home/categories/categories.component.html
+++ b/src/app/modules/home/categories/categories.component.html
@@ -2,7 +2,7 @@
   <span *ngFor="let category of categories">
     <mat-card
       
-      [ngClass]="mode === 'mobile' ? 'mobile' : 'desktop'"
+      [ngClass]="mode === 'mobile' ? 'mobile' : 'column'"
     >
       <img
         mat-card-image
