--- a/src/app/modules/home/home-desktop/home-desktop.component.html
+++ b/src/app/modules/home/home-desktop/home-desktop.component.html
@@ -1,1 +1,13 @@
-<p>home-desktop works!</p>
+<app-banner mode="desktop"></app-banner>
+<div class="row mt-3">
+    <h3 class="title">
+        Trending
+    </h3>
+</div>
+<app-cards mode="desktop" class="wrap-cards"></app-cards>
+<div class="row mt-3">
+    <h3 class="title">
+        Our Categories
+    </h3>
+</div>
+<app-categories mode="desktop" class="wrap-cards"></app-categories>
