--- a/src/app/modules/product-detail/product-desktop/product-desktop.component.html
+++ b/src/app/modules/product-detail/product-desktop/product-desktop.component.html
@@ -1,1 +1,52 @@
-<p>product-desktop works!</p>
+<div *ngIf="product; else loading">
+    <div class="product-detail">
+    <img [src]="product?.product_image" [alt]="product?.product_name" />
+    <div class="card">
+      <div class="card-body">
+        <div class="card-title">
+          <h3 class="row">
+            <span class="col-12 h3 product-name">
+              {{ product.product_name }}
+            </span>
+            <span class="col-6 text-muted price-info">
+              Price:&nbsp;&nbsp;{{ priceSymbol }}&nbsp;{{ product.price }}
+            </span>
+            <span class="col-6 text-muted price-info">
+              Delivery:&nbsp;&nbsp;{{ priceSymbol }}&nbsp;{{
+                product.delivery_price
+              }}
+            </span>
+          </h3>
+        </div>
+        <hr class="my-4" />
+        <div class="cart-text text-muted price-desc">
+          <p class="row">
+            <span class="col-12">{{ product.product_desc }}</span>
+          </p>
+        </div>
+      </div>
+      <mat-toolbar *ngIf="product.quantity > 0" color="primary">
+        <span>
+          <mat-icon>remove_circle_outline</mat-icon>
+          &nbsp;
+          <span class="qty">{{ this.selectedQuantity }}</span>
+          &nbsp;
+          <mat-icon (click)="updateQuantity('inc')">add_circle_outline</mat-icon>
+        </span>
+        <mat-icon (click)="addToCart()">add_shopping_cart</mat-icon>
+      </mat-toolbar>
+      <mat-toolbar *ngIf="!(product.quantity > 0)" color="accent"
+        ><span class="out-of-stock"
+          ><mat-icon>remove_shopping_cart</mat-icon>&nbsp;
+          <p>Out of stock</p></span
+        ></mat-toolbar
+      >
+    </div>
+    </div>
+    <h3 class="title">Similar Products</h3>
+    <app-cards mode="desktop" class="mt-5" class="warp-cards"></app-cards>
+  </div>
+  <ng-template #loading>
+    <app-spinner></app-spinner>
+  </ng-template>
+  
