--- a/src/app/shared/banner/banner.component.scss
+++ b/src/app/shared/banner/banner.component.scss
@@ -27,3 +27,12 @@ div{
 h3{
     font-size: 2rem;
 }
+@media only screen and (min-width: 600px) {
+    .hero-body{
+        top:50%;
+        left: 50%;
+    }
+    h3{
+        font-size: 3rem;
+    }
+  }
